--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
             https://github.com/*
             https:/twitter.com"
          ],
+	      default_popup": "popup.html
 		 "css":[
 			"inject-styles.css"
 		 ],
