--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,23 @@
-{  
-   "manifest_version":0,
-   "name":"Quicksource",
-   "short_name":"QuickSource",
-   "description":"Save Bookmark Storatge",
-   "default_locale": "en",
-   "content_scripts":[  
-      {  
-         "matches":[  
-            "https://google.com/*
-            https://wikipedia.com/*
-            https://github.com/*
-            https:/twitter.com"
-         ],
-		 "css":[
-			"inject-styles.css"
-		 ],
-         "js":[  
-            "code.js"
-         ],
-         "run_at":"document_idle"
-      }
+ {  
+ -   "manifest_version":0,		 +   "manifest_version":03
+     "name":"Quicksource",		     "name":"Quicksource",
+     "short_name":"QuickSource",		     "short_name":"QuickSource",
+     "description":"Save Bookmark Storatge",		     "description":"Save Bookmark Storatge",
+ @@ -10,14 +10,16 @@
+              "https://google.com/*		              "https://google.com/*
+              https://wikipedia.com/*		              https://wikipedia.com/*
+              https://github.com/*		              https://github.com/*
+ -            https:/twitter.com"		 +            https:/twitter.com/ "
+ -         ],		 +		 [,
+ -	      default_popup": "popup.html		 +		 
+ +        "html": {
+ +	      default_popup": "popup.html"
+ +	 },
+  		 "css":[		  		 "css":[
+ -			"inject-styles.css"		 +			"style.css"
+  		 ],		  		 ],
+           "js":[  		           "js":[  
+              "code.js"		              "code.js"
+           		           
+ -         "run_at":"document_idle"		
+        }		        }
